Changed how config and api keys are stored and retrieved